# django-fastapi-ollama

./: .env.example  .gitignore  README.md  docker-compose.yml  notes.txt  package-lock.json  package.json  prompts.txt  pyproject.toml
fastapi_app/: Dockerfile  config.py  db.py  error_log.txt  llm.py  main.py  requirements.txt  schemas.py  scraper.py
fastapi_app/tests/: conftest.py  test_api.py  test_schemas.py
job_finder/: Dockerfile  conftest.py  pytest.ini  requirements.txt
job_finder/accounts/: admin.py  models.py  tests.py
job_finder/accounts/migrations/: 0001_initial.py  0002_seed_drf_integration_user.py
job_finder/api/: serializers.py  tests.py  urls.py  views.py
job_finder/home/: admin.py  models.py  tests.py  urls.py  views.py
job_finder/home/migrations/: 0001_initial.py  0002_alter_joblisting_company_and_more.py  0003_systeminstruction.py  0004_systeminstruction_name.py  0005_remove_joblisting_score_and_more.py  0006_alter_joblisting_years_of_experience.py  0007_joblisting_salary.py  0008_joblisting_posted_at_alter_joblisting_salary.py  0009_alter_joblisting_posted_at.py  0010_alter_joblisting_company_alter_joblisting_salary_and_more.py  0011_resume.py  0012_jobmatch.py  0013_alter_jobmatch_options.py  0014_alter_joblisting_url.py  0015_alter_joblisting_url.py  0016_alter_joblisting_options_alter_portal_options_and_more.py  0017_portal_scrape_url_portal_scraper_class.py  0017_seed_system_instruction_and_portals.py  (+1 more)
job_finder/job_finder/: asgi.py  settings.py  urls.py  wsgi.py
job_finder/tasks/: admin.py  models.py  tests.py
(+7 files in other folders)
