[project]
name = "django-fastapi-cv"
version = "0.1.0"
description = "Job Scraper Engine | AI-Powered IT Job Aggregator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "uvicorn",
    "django>=6.0.2",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic",
    "tenacity",
    "openai>=2.30.0",
    "djangorestframework>=3.17.1",
    "django-filter>=25.2",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
